--- a/TrackMyDocs/track_my_docs/templates/track_my_docs/home.html
+++ b/TrackMyDocs/track_my_docs/templates/track_my_docs/home.html
@@ -4,14 +4,59 @@
 
 <!--User contact us css link-->
 {% block css %}
-    <link rel="stylesheet" href="{% static 'track_my_docs/home.css' %}">
+<link rel="stylesheet" href="{% static 'track_my_docs/home.css' %}">
 {% endblock css %}
 
 <script src="https://kit.fontawesome.com/caeb9ec53e.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 {% block content %}
-    <!--TrackMyDocs Introduction message-->
-    <h1 class="text-xl text-center pb-3"><span class=" font-bold text-orange-600">Welcome to TrackMyDocs !</h1>
-    <p class="text-center pb-3">Your all-in-one digital platform for tracking your ID status. </p>
+<!--TrackMyDocs Introduction message-->
+<p class="text-center">
+    <i class="fas fa-id-card-alt text-4xl text-orange-500 mb-4"></i>
+</p>
+
+<h1 class="text-xl text-center pb-3"><span class=" font-bold text-orange-600">Welcome to TrackMyDocs !</h1>
+<p class="text-center pb-3">Your all-in-one digital platform for tracking your ID status. </p>
+
+<!--Our services-->
+<div class="grid gap-8 grid-cols-1 pt-10 md:grid-cols-2 lg:grid-cols-2 mx-auto max-w-3xl">
+    <!-- New Application -->
+    <a href="{% url 'track_my_docs:new-id-application' %}">
+        <div
+            class="bg-blue-500 text-white shadow-lg rounded-lg p-6 flex flex-col items-center hover:bg-blue-600 transition duration-300 ease-in-out">
+            <i class="fas fa-file-alt text-5xl mb-4"></i>
+            <p class="text-base font-semibold">New Application</p>
+        </div>
+    </a>
+
+    <!-- Status Correction -->
+    <a href="{% url 'track_my_docs:id-status-correction' %}">
+        <div
+            class="bg-green-500 text-white shadow-lg rounded-lg p-6 flex flex-col items-center hover:bg-green-600 transition duration-300 ease-in-out">
+            <i class="fas fa-edit text-5xl mb-4"></i>
+            <p class="text-base font-semibold">Status Correction</p>
+        </div>
+    </a>
+
+    <!-- Lost ID Re-application -->
+    <a href="{% url 'track_my_docs:lost-id-reapplication' %}">
+        <div
+            class="bg-yellow-500 text-white shadow-lg rounded-lg p-6 flex flex-col items-center hover:bg-yellow-600 transition duration-300 ease-in-out">
+            <i class="fas fa-id-badge text-5xl mb-4"></i>
+            <p class="text-base font-semibold">Lost ID Re-application</p>
+        </div>
+    </a>
+
+    <!-- Complaints -->
+    <a href="{% url 'track_my_docs:user-complaint' %}">
+        <div
+            class="bg-red-500 text-white shadow-lg rounded-lg p-6 flex flex-col items-center hover:bg-red-600 transition duration-300 ease-in-out">
+            <i class="fas fa-exclamation-circle text-5xl mb-4"></i>
+            <p class="text-base font-semibold">Complaints</p>
+        </div>
+    </a>
+
+</div>
+</div>
 {% endblock content %}
