--- a/TrackMyDocs/track_my_docs/templates/track_my_docs/id_status_correction.html
+++ b/TrackMyDocs/track_my_docs/templates/track_my_docs/id_status_correction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,32 +17,40 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="bg-[#1C2120] text-[#FFFFFF] pt-10">
-    
-    <h1 class="text-xl text-center pb-5 font-bold text-orange-600">ID Errors ?</h1>
-    <p class="text-center pb-5">Correct any mistakes on your ID as quick as possible.</p>
-    <form action="" method="POST" class="status-correction text-center">
-        {% csrf_token %}
-        
-        <!-- Messages block -->
-        {% if messages %}
-            <div class="text-center py-4">
-                {% for message in messages %}
-                    <p class="text-blue-600">{{ message }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-        
-        {{ form.as_p }}
-        <p>
-            <input type="submit" value="submit" class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
-        </p> 
 
-        <p class="pt-3 font-bold">
-            
-            <a href="{% url 'track_my_docs:home' %}">Back <i class="fa-solid fa-house"></i></a>
-        </p>
-    </form>
-    
+<body class="bg-[#1C2120] text-[#FFFFFF] pt-10">
+
+    <h1 class="text-xl text-center pb-3 font-bold text-orange-600">ID Errors ?</h1>
+    <p class="text-center pb-3">Correct any mistakes on your ID as quick as possible.</p>
+
+    <div class="flex items-center justify-center text-black pt-3">
+        <div class="bg-white max-w-6xl w-full shadow-lg rounded-lg p-4">
+            <form action="" method="POST" class="status-correction text-center">
+                {% csrf_token %}
+
+                <!-- Messages block -->
+                {% if messages %}
+                <div class="text-center py-2">
+                    {% for message in messages %}
+                    <p class="text-blue-600">{{ message }}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
+
+                {{ form.as_p }}
+                <p>
+                    <input type="submit" value="submit"
+                        class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
+                </p>
+
+                <p class="pt-3 font-bold">
+
+                    <a href="{% url 'track_my_docs:home' %}">Back <i class="fa-solid fa-house"></i></a>
+                </p>
+            </form>
+        </div>
+    </div>
+
 </body>
+
 </html>
