Styled the services

--- a/TrackMyDocs/track_my_docs/templates/registration/login.html
+++ b/TrackMyDocs/track_my_docs/templates/registration/login.html
@@ -27,7 +27,7 @@
             <span>Your go-to platform for tracking your ID status.</span>
         </p>
         <div class="flex items-center justify-center text-black pt-3">
-            <div class="bg-white max-w-md w-full shadow-lg rounded-lg p-4">
+            <div class="bg-white max-w-xl w-full shadow-lg rounded-lg p-4">
                 <form action="" method="POST" class="login text-center">
                     {% csrf_token %}
                     {{ form.as_p }}
