--- a/TrackMyDocs/track_my_docs/templates/track_my_docs/complaint.html
+++ b/TrackMyDocs/track_my_docs/templates/track_my_docs/complaint.html
@@ -12,34 +12,40 @@
 
     <link rel="stylesheet" href="{% static 'track_my_docs/complaint.css' %}">
 
-     <!--Support css-->
-     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-     <script src="https://kit.fontawesome.com/caeb9ec53e.js" crossorigin="anonymous"></script>
-     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!--Support css-->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <script src="https://kit.fontawesome.com/caeb9ec53e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body class="bg-[#1C2120] text-[#FFFFFF] pt-10">
 
-    <h1 class="text-xl text-center pb-5"><span class=" font-bold text-orange-600">Have Complaint ?</span> We're Here for
-        You !</h1>
+    <h1 class="text-xl text-center pb-5 font-bold text-orange-600">Have Complaint ?</h1>
     <p class="text-center pb-5">Submit your concerns and let us handle the rest. </p>
-    <form action="" method="POST" class="complaint text-center">
-        {% csrf_token %}
 
-        {% if message %}
+    <div class="flex items-center justify-center text-black pt-3">
+        <div class="bg-white max-w-5xl w-full shadow-lg rounded-lg p-4">
+            <form action="" method="POST" class="complaint text-center">
+                {% csrf_token %}
 
-        <p class="text-blue-600">{{ message }}</p>
-        {% endif %}
+                {% if message %}
 
-        {{ complaint_form.as_p }}
-        <p>
-            <input type="submit" value="submit" class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
-        </p>
-        <p class="pt-3 font-bold">
-            
-            <a href="{% url 'track_my_docs:home' %}">Back <i class="fa-solid fa-house"></i></a>
-        </p>
-    </form>
+                <p class="text-blue-600 py-2">{{ message }}</p>
+                {% endif %}
+
+                {{ complaint_form.as_p }}
+                <p>
+                    <input type="submit" value="submit"
+                        class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
+                </p>
+                <p class="pt-3 font-bold">
+
+                    <a href="{% url 'track_my_docs:home' %}">Back <i class="fa-solid fa-house"></i></a>
+                </p>
+            </form>
+        </div>
+    </div>
 
 </body>
 
