--- a/TrackMyDocs/track_my_docs/static/track_my_docs/lost_id_reapplication.css
+++ b/TrackMyDocs/track_my_docs/static/track_my_docs/lost_id_reapplication.css
@@ -1,12 +1,12 @@
 .lost-id-reapplication label {
-    display: block;  /* Ensures the label is on a separate line above the input */
-    margin-bottom: 5px;  /* Adds space between the label and input */
+    display: block; 
+    margin-bottom: 5px;  
     font-weight: bold;
 }
 
 .lost-id-reapplication input[type="text"],
 .lost-id-reapplication textarea {
-    width: 20%;
+    width: 50%;
     padding: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -25,7 +25,7 @@
     margin-top: 5px;
     background-color: #737373;
     cursor: pointer;
-    width: 20%;
+    width: 80%;
     border-radius: 10px;
     margin-bottom: 5px;
 }
