--- a/TrackMyDocs/track_my_docs/templates/track_my_docs/base.html
+++ b/TrackMyDocs/track_my_docs/templates/track_my_docs/base.html
@@ -37,9 +37,9 @@
                     class="h-20 pt-4 pb-4 rounded-full"> -->
             </li>
 
-            <li class="animate-pulse navlinks hover:text-orange-600"><a href="{% url 'track_my_docs:home' %}">Home</a></li>
-            <li class="animate-pulse navlinks hover:text-orange-600"><a href="#">Profile</a></li>
-            <li class="animate-pulse navlinks hover:text-orange-600"><a href="{% url 'track_my_docs:user-logout' %}"
+            <li class="hover:text-orange-600"><a href="{% url 'track_my_docs:home' %}">Home</a></li>
+            <li class="hover:text-orange-600"><a href="#">Profile</a></li>
+            <li class="hover:text-orange-600"><a href="{% url 'track_my_docs:user-logout' %}"
                     class="logout">Log Out</a></li>
 
         </ul>
