--- a/TrackMyDocs/track_my_docs/templates/track_my_docs/new_id_application_form.html
+++ b/TrackMyDocs/track_my_docs/templates/track_my_docs/new_id_application_form.html
@@ -16,26 +16,30 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="bg-[#1C2120] text-[#FFFFFF] pt-3"> 
+<body class="bg-[#1C2120] text-[#FFFFFF] pt-16"> 
     <h1 class="text-xl text-center pb-5 font-bold text-orange-600">New Application ?</h1>
-    <!-- <p class="text-center pb-5">Fast and seamless ID applications at your fingertips.</p> -->
-    <form action="" method="POST" class="new_application text-center">
-        {% csrf_token %}
+    
+    <div class="flex items-center justify-center text-black pt-3">
+        <div class="bg-white max-w-6xl w-full shadow-lg rounded-lg p-4">
+            <form action="" method="POST" class="new_application text-center">
+                {% csrf_token %}
+                
+                <!-- Messages block -->
+                {% if messages %}
+                    <div class="text-center py-2">
+                        {% for message in messages %}
+                            <p class="text-blue-600">{{ message }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
         
-        <!-- Messages block -->
-        {% if messages %}
-            <div class="text-center py-4">
-                {% for message in messages %}
-                    <p class="text-blue-600">{{ message }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-
-        {{ form.as_p }}
-        <p>
-            <input type="submit" value="submit" class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
-            <a href="{% url 'track_my_docs:home' %}"><span class="pl-4">Back <i class="fa-solid fa-house"></i></span></a>
-        </p> 
-    </form>
+                {{ form.as_p }}
+                <p>
+                    <input type="submit" value="submit" class="bg-[#FEB06A] w-32 h-10 rounded cursor-pointer mt-4 font-bold">
+                    <a href="{% url 'track_my_docs:home' %}"><span class="pl-4">Back <i class="fa-solid fa-house"></i></span></a>
+                </p> 
+            </form>
+        </div>
+    </div>
 </body>
 </html>
